--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +15,10 @@
         android:theme="@style/Theme.BooksForYou"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreen"
+            android:name=".Registro"
+            android:exported="false" />
+        <activity
+            android:name=".Arranque"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +27,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".Acceso"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
